# WORKMATE

./: .gitignore  README.md  pyproject.toml  test.csv
.github/workflows/: python-app.yml
csv_tool/: cli.py  io.py
csv_tool/operations/: aggregate.py  filters.py
tests/: test_aggregate.py  test_cli.py  test_filters.py
