[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-tool"
version = "0.1.0"
description = "Small CLI for filtering/aggregating CSV files"
authors = [{ name = "Max", email = "maxiprsk@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.10"


[project.scripts]
csv-tool = "csv_tool.cli:main"


[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "black>=24.4",
    "flake8>=7.0",
    "mypy>=1.10",
]



[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["tests/"]  

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"